--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="marker_info_background">#A3CDF7</color>
+    <color name="marker_info">#086CC9</color>
+    <color name="marker_name">#000000</color>
+
 </resources>
