--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -102,6 +102,7 @@
         app:layout_constraintTop_toBottomOf="@+id/search_view" />
 
 
+
     <android.support.constraint.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
@@ -109,6 +110,15 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="671dp" />
 
+    <Button
+        android:id="@+id/button_find_route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="ROUTE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/button_website" />
 
 
 </android.support.constraint.ConstraintLayout>
