--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#C91806</color>
     <color name="marker_info">#086CC9</color>
     <color name="marker_name">#000000</color>
-
+    <!--<color name="colorAccent">#D81B60</color>-->
 </resources>
