--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -154,9 +154,23 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="495dp" />
 
+
+
+    <android.support.v4.app.FragmentTabHost
+        android:id="@+id/frag_holder"
+        android:layout_width="312dp"
+        android:layout_height="124dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline6">
+
     <fragment
         android:id="@+id/store_dtl_frag"
-        android:name="com.appolica.interactiveinfowindow.fragment.MapInfoWindowFragment"
+        android:name="thanos.skoulopoulos.gr.googlemaps.StoreDetailsFrag"
         android:layout_width="312dp"
         android:layout_height="124dp"
         android:layout_marginStart="8dp"
@@ -166,6 +180,10 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
+
+    </android.support.v4.app.FragmentTabHost>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
