--- a/app/src/main/res/layout/activity_store_details_frag.xml
+++ b/app/src/main/res/layout/activity_store_details_frag.xml
@@ -31,8 +31,18 @@
         android:id="@+id/store_img-dtl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/store_desc_dtl"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/close_dtl_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="close"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintEnd_toStartOf="@+id/store_img-dtl"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/store_desc_dtl" />
 </android.support.constraint.ConstraintLayout>
