--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#838383" />
+
+
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+            <solid android:color="#A9D2F3" />
+
+    <stroke android:width="5dp" android:color="#080909"/>
+
         </shape>
-    </item>
-    <item android:left="5dp" android:right="5dp"  android:top="5dp" >
-        <shape android:shape="rectangle">
-            <solid android:color="#A1DCE2" />
-        </shape>
-    </item>
-</layer-list>
+
+
